champlain-view: Add safety check to view_find_suitable_zoom function

https://bugzilla.gnome.org/show_bug.cgi?id=764662